--- a/index.html
+++ b/index.html
@@ -33,19 +33,25 @@
             <div id="form1">
                 <h3>Game Over!!!!!!!</h3>
                 <h3>Your Score:<span id="score1">0</span></h3>
-                <label>Enter Your Name:</label>
-                <input type="text" id="name" />
+                <label>Enter Your Initials:</label>
+                <input type="text" id="name" placeholder="Initials" />
                 <button id="submit">Submit</button>
+
                 <button class="replay" id="replay1">Play Again</button>
                 <button class="replay" id="clear">Clear Storage</button>
+                <ul id="list"></ul>
             </div>
         </aside>
+
         <aside id="highscorecontainer">
             <!--high score display-->
             <div id="highscore">
+                <button class="replay" id="clearLocal">Clear Storage</button>
                 <button class="replay" id="replay2">Play Again</button>
                 <h3>PLAYER LISTS WITH SCORES...</h3>
-                <ul id="list"></ul>
+                <!-- <ul id="list">
+                    Updated List ..
+                </ul> -->
                 <ul id="list2"></ul>
             </div>
         </aside>
